Update to 1.3.0